<resources>
    <string name="app_name">PexWalls</string>

    <!--  category  -->
    <string name="category_toolbar_title">Category</string>
    <string name="category_color_title">Color</string>
    <string name="category_theme_title">Theme</string>

    <!--  curated  -->
    <string name="curated_toolbar_title">Curated</string>

    <!--  search  -->
    <string name="search_toolbar_title">Search</string>

    <!--  favorites  -->
    <string name="favorites_toolbar_title">Favorites</string>

    <!--  photo  -->
    <string name="photo_photographer_title">Photo by</string>
    <string name="photo_resolution_title">Original resolution</string>
    <string name="photo_download_btn">Download original</string>
    <string name="photo_wallpaper_btn">Set as wallpaper</string>

    <!--  common  -->
    <string name="progress_title">your inspiration almost here</string>
    <string name="pexels_promo">powered by pexels api</string>
    <string name="placeholder_error">Oops\nSomething went wrong =(\nTry again later</string>
    <string name="placeholder_try_now_btn">try now</string>
    <string name="placeholder_search_empty_results">We did not find anything…</string>
    <string name="placeholder_search">Here you will see photos by your search</string>
    <string name="placeholder_loading_title">your inspiration almost here</string>
    <string name="navigation_home">home</string>
    <string name="navigation_curated">curated</string>
    <string name="navigation_search">search</string>
    <string name="navigation_favorite">favorite</string>


</resources>
