<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/placeholder_view_fl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/loading_container_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <com.greylabsdev.pexwalls.presentation.view.ProgressView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_title"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_container_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_error"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_now_btn"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:text="@string/placeholder_try_now_btn"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_container_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_search_empty_results"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/initial_container_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_search"
            android:textAlignment="center" />

    </LinearLayout>

</FrameLayout>